[UIMA-2844] findbugs issues: have skipped bytes calls be cognizant of number of bytes skipped; prepare pom (commented out for now) for supporting selective overrides of particular findbug rules, Reduce large static final identical string replication in multiple classes, use Integer.valueOf
git-svn-id: https://svn.apache.org/repos/asf/uima/uimaj/trunk@1476384 13f79535-47bb-0310-9956-ffa450edef68